Clean up: Remove separate projects page, integrate projects into main page

--- a/index.html
+++ b/index.html
@@ -240,6 +240,72 @@
      </article>
     </div>
   </section>
+
+  <section class="projects-section" id="projects" aria-labelledby="projects-heading">
+    <h2 id="projects-heading" class="projects-head">FEATURED PROJECTS</h2>
+    
+    <div class="projects-grid" role="list" aria-label="Featured DevOps projects">
+      <div class="project-card" role="article">
+        <div class="project-image">
+          <img src="./assets/images/projects/kubernetes-monitoring-dashboard.png" alt="Kubernetes cluster monitoring dashboard showing node health, pod status, and resource metrics">
+        </div>
+        <div class="project-info">
+          <h3>Kubernetes Cluster Monitoring</h3>
+          <p class="project-desc">Comprehensive Kubernetes cluster monitoring dashboard using Grafana. Real-time monitoring of node health, pod status, resource utilization, and container performance metrics.</p>
+          <div class="project-tech">
+            <span class="tech-tag">Kubernetes</span>
+            <span class="tech-tag">Grafana</span>
+            <span class="tech-tag">Prometheus</span>
+            <span class="tech-tag">Docker</span>
+          </div>
+          <div class="project-metrics">
+            <div class="metric">
+              <span class="metric-value">6</span>
+              <span class="metric-label">Active Nodes</span>
+            </div>
+            <div class="metric">
+              <span class="metric-value">270+</span>
+              <span class="metric-label">Running Pods</span>
+            </div>
+            <div class="metric">
+              <span class="metric-value">100%</span>
+              <span class="metric-label">Node Ready</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-card" role="article">
+        <div class="project-image">
+          <img src="./assets/images/projects/cicd-pipeline-dashboard.png" alt="CI/CD pipeline dashboard showing automated build, test, deploy stages with Docker and Artifactory integration">
+        </div>
+        <div class="project-info">
+          <h3>CI/CD Pipeline Automation</h3>
+          <p class="project-desc">Advanced CI/CD pipeline implementation with automated build, test, deploy, and artifact management. Includes Docker containerization, secret management, and Artifactory integration.</p>
+          <div class="project-tech">
+            <span class="tech-tag">Jenkins</span>
+            <span class="tech-tag">Docker</span>
+            <span class="tech-tag">Artifactory</span>
+            <span class="tech-tag">DevOps</span>
+          </div>
+          <div class="project-metrics">
+            <div class="metric">
+              <span class="metric-value">15+</span>
+              <span class="metric-label">Pipeline Stages</span>
+            </div>
+            <div class="metric">
+              <span class="metric-value">2m 5s</span>
+              <span class="metric-label">Build Time</span>
+            </div>
+            <div class="metric">
+              <span class="metric-value">100%</span>
+              <span class="metric-label">Automated</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   </main>
 
   <footer class="footer-banner" role="contentinfo" id="contact-me" aria-labelledby="contact-heading">
