Replace placeholders with real project images

--- a/index.html
+++ b/index.html
@@ -247,10 +247,7 @@
     <div class="projects-grid" role="list" aria-label="Featured DevOps projects">
       <div class="project-card" role="article">
         <div class="project-image">
-          <div class="project-placeholder">
-            <span class="placeholder-icon">🎯</span>
-            <span class="placeholder-text">Kubernetes Dashboard</span>
-          </div>
+          <img src="./assets/images/projects/kubernetes-monitoring-dashboard.png" alt="Kubernetes cluster monitoring dashboard showing node health, pod status, and resource metrics">
         </div>
         <div class="project-info">
           <h3>Kubernetes Cluster Monitoring</h3>
@@ -280,10 +277,7 @@
 
       <div class="project-card" role="article">
         <div class="project-image">
-          <div class="project-placeholder">
-            <span class="placeholder-icon">🚀</span>
-            <span class="placeholder-text">CI/CD Pipeline</span>
-          </div>
+          <img src="./assets/images/projects/cicd-pipeline-dashboard.png" alt="CI/CD pipeline dashboard showing automated build, test, deploy stages with Docker and Artifactory integration">
         </div>
         <div class="project-info">
           <h3>CI/CD Pipeline Automation</h3>
