Clean up placeholders: Remove technical instructions, show professional preview

--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
     <div class="projects-grid" role="list" aria-label="Featured DevOps projects">
       <div class="project-card" role="article">
         <div class="project-image">
-          <img src="./assets/images/projects/kubernetes-monitoring-dashboard.png" alt="Kubernetes cluster monitoring dashboard showing node health, pod status, and resource metrics">
+          <div class="project-placeholder">
+            <span class="placeholder-icon">📊</span>
+            <span class="placeholder-text">Kubernetes Monitoring Dashboard</span>
+          </div>
         </div>
         <div class="project-info">
           <h3>Kubernetes Cluster Monitoring</h3>
@@ -277,7 +280,10 @@
 
       <div class="project-card" role="article">
         <div class="project-image">
-          <img src="./assets/images/projects/cicd-pipeline-dashboard.png" alt="CI/CD pipeline dashboard showing automated build, test, deploy stages with Docker and Artifactory integration">
+          <div class="project-placeholder">
+            <span class="placeholder-icon">⚙️</span>
+            <span class="placeholder-text">CI/CD Pipeline Dashboard</span>
+          </div>
         </div>
         <div class="project-info">
           <h3>CI/CD Pipeline Automation</h3>
